reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__knowledge_context.rs_line_890_col_9.log

*** crates/tracewake-core/src/epistemics/knowledge_context.rs:890:9: replace KnowledgeContext::seal -> Self with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/epistemics/knowledge_context.rs
+++ replace KnowledgeContext::seal -> Self with Default::default()
@@ -882,108 +882,17 @@
         mut actor_known_food_sources: Vec<ActorKnownFoodSourceFact>,
         mut actor_known_sleep_affordances: Vec<ActorKnownSleepAffordanceFact>,
         mut actor_known_routes: Vec<ActorKnownRouteFact>,
         mut actor_known_doors: Vec<ActorKnownDoorFact>,
         mut actor_known_containers: Vec<ActorKnownContainerFact>,
         mut actor_known_items: Vec<ActorKnownItemFact>,
         mut actor_known_local_actors: Vec<ActorKnownLocalActorFact>,
     ) -> Self {
-        provenance_entries.sort();
-        provenance_entries.dedup();
-        actor_known_workplaces.sort();
-        actor_known_workplaces.dedup();
-        actor_known_current_places.sort();
-        actor_known_current_places.dedup();
-        actor_known_carried_items.sort();
-        actor_known_carried_items.dedup();
-        actor_known_food_sources.sort();
-        actor_known_food_sources.dedup();
-        actor_known_sleep_affordances.sort();
-        actor_known_sleep_affordances.dedup();
-        actor_known_routes.sort();
-        actor_known_routes.dedup();
-        actor_known_doors.sort();
-        actor_known_doors.dedup();
-        actor_known_containers.sort();
-        actor_known_containers.dedup();
-        actor_known_items.sort();
-        actor_known_items.dedup();
-        actor_known_local_actors.sort();
-        actor_known_local_actors.dedup();
-        let projection_schema_version = SchemaVersion::new(EPISTEMIC_RECORD_SCHEMA_V1).unwrap();
-        let holder_known_context_id = HolderKnownContextId::new(format!(
-            "hkc.{}.{}.{}",
-            viewer_actor_id.as_str(),
-            current_tick.value(),
-            event_frontier
-        ))
-        .unwrap();
-        let status = KnowledgeContextStatus::Current;
-        let forbidden_truth_audit =
-            ForbiddenTruthAudit::passed_excluding(forbidden_sources.clone());
-        let holder_known_context_hash = compute_holder_known_context_hash(canonical_hash_inputs(
-            &holder_known_context_id,
-            &viewer_actor_id,
-            &bound_actor_id,
-            mode,
-            current_tick,
-            event_frontier,
-            &allowed_sources,
-            &forbidden_sources,
-            &perception_scope,
-            &belief_scope,
-            &observation_scope,
-            &projection_schema_version,
-            debug_non_diegetic,
-            &provenance_entries,
-            &actor_known_workplaces,
-            &actor_known_current_places,
-            &actor_known_carried_items,
-            &actor_known_food_sources,
-            &actor_known_sleep_affordances,
-            &actor_known_routes,
-            &actor_known_doors,
-            &actor_known_containers,
-            &actor_known_items,
-            &actor_known_local_actors,
-            &forbidden_truth_audit,
-            status,
-        ))
-        .hash;
-
-        Self {
-            viewer_actor_id,
-            bound_actor_id,
-            mode,
-            current_tick,
-            event_frontier,
-            allowed_sources,
-            forbidden_sources,
-            perception_scope,
-            belief_scope,
-            observation_scope,
-            projection_schema_version,
-            debug_non_diegetic,
-            holder_known_context_id,
-            holder_known_context_hash,
-            provenance_entries,
-            actor_known_workplaces,
-            actor_known_current_places,
-            actor_known_carried_items,
-            actor_known_food_sources,
-            actor_known_sleep_affordances,
-            actor_known_routes,
-            actor_known_doors,
-            actor_known_containers,
-            actor_known_items,
-            actor_known_local_actors,
-            forbidden_truth_audit,
-            status,
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn debug(
         viewer_actor_id: ActorId,
         current_tick: SimTick,
         _capability: &DebugCapability,
     ) -> Self {
         Self::seal(


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `compute_holder_known_context_hash`
 --> crates/tracewake-core/src/epistemics/knowledge_context.rs:4:23
  |
4 | use crate::checksum::{compute_holder_known_context_hash, HolderKnownContextHash};
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `EPISTEMIC_RECORD_SCHEMA_V1`
 --> crates/tracewake-core/src/epistemics/knowledge_context.rs:6:52
  |
6 | use crate::epistemics::observation::{PrivacyScope, EPISTEMIC_RECORD_SCHEMA_V1};
  |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `KnowledgeContext: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:890:9
    |
890 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `KnowledgeContext`
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:699:1
    |
699 | pub struct KnowledgeContext {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 2 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `knowledge_context::KnowledgeContext: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:890:9
    |
890 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `knowledge_context::KnowledgeContext`
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:699:1
    |
699 | pub struct KnowledgeContext {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 2 warnings (2 duplicates)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
